# pedal-bom-manager

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  cli.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.md
.github/workflows/: docker-publish.yml  python-app.yml
examples/: checklist.md  master_shopping_list.csv  shopping_checklist.md  shopping_list.csv
src/: bom_lib.py  constants.py  pdf_generator.py  presets.py
tests/: test_app.py  test_parser.py  test_pdf_snapshots.py
tools/: generate_presets.py
